refactor: Some renaming and reorganizing