@@ -5,7 +5,6 @@ import com.danubetech.keyformats.jose.JWSAlgorithm;
 import com.danubetech.keyformats.jose.KeyTypeName;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -19,16 +18,14 @@ public class DataIntegrityProofDataIntegritySuite extends DataIntegritySuite {
 				URI.create("https://w3id.org/security#URDNA2015"),
 				URI.create("https://registry.ietf.org/ietf-digest-algorithms#SHA256"),
 				null,
-				List.of(KeyTypeName.RSA,
-						KeyTypeName.Ed25519,
+				List.of(KeyTypeName.Ed25519,
 						KeyTypeName.secp256k1,
 						KeyTypeName.P_256,
 						KeyTypeName.P_384),
-				Map.of(KeyTypeName.RSA, List.of(JWSAlgorithm.PS256, JWSAlgorithm.RS256),
-						KeyTypeName.Ed25519, List.of(JWSAlgorithm.EdDSA),
+				Map.of(KeyTypeName.Ed25519, List.of(JWSAlgorithm.EdDSA),
 						KeyTypeName.secp256k1, List.of(JWSAlgorithm.ES256K),
 						KeyTypeName.P_256, List.of(JWSAlgorithm.ES256),
 						KeyTypeName.P_384, List.of(JWSAlgorithm.ES384)),
-				Arrays.asList(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SUITES_JWS_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
+                List.of(LDSecurityContexts.JSONLD_CONTEXT_W3ID_DATAINTEGRITY_V2));
 	}
 }
