@@ -1,11 +1,10 @@
 package com.danubetech.dataintegrity.suites;
 
+import com.danubetech.dataintegrity.jsonld.LDSecurityContexts;
 import com.danubetech.keyformats.jose.JWSAlgorithm;
 import com.danubetech.keyformats.jose.KeyTypeName;
-import com.danubetech.dataintegrity.jsonld.LDSecurityContexts;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -21,6 +20,6 @@ public class JcsEd25519Signature2020DataIntegritySuite extends DataIntegritySuit
 				URI.create("http://w3id.org/security#ed25519"),
 				List.of(KeyTypeName.Ed25519),
 				Map.of(KeyTypeName.Ed25519, List.of(JWSAlgorithm.EdDSA)),
-				Arrays.asList(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SUITES_ED25519_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
+				List.of(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_SUITES_ED25519_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
 	}
 }
