@@ -1,11 +1,10 @@
 package com.danubetech.dataintegrity.suites;
 
+import com.danubetech.dataintegrity.jsonld.LDSecurityContexts;
 import com.danubetech.keyformats.jose.JWSAlgorithm;
 import com.danubetech.keyformats.jose.KeyTypeName;
-import com.danubetech.dataintegrity.jsonld.LDSecurityContexts;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -29,6 +28,6 @@ public class JsonWebSignature2020DataIntegritySuite extends DataIntegritySuite {
 						KeyTypeName.secp256k1, List.of(JWSAlgorithm.ES256K),
 						KeyTypeName.P_256, List.of(JWSAlgorithm.ES256),
 						KeyTypeName.P_384, List.of(JWSAlgorithm.ES384)),
-				Arrays.asList(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SUITES_JWS_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
+				List.of(LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_SUITES_JWS_2020_V1, LDSecurityContexts.JSONLD_CONTEXT_W3ID_SECURITY_V3));
 	}
 }
